# cli-rust

./: Cargo.toml  README.md
catr/: Cargo.toml
catr/src/: main.rs
catr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: main.rs
echor/: Cargo.toml
findr/: Cargo.toml
findr/src/: main.rs
headr/: Cargo.toml
headr/src/: main.rs
headr/tests/: cli.rs
src/: main.rs
uniqr/: Cargo.toml
uniqr/src/: main.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: main.rs
wcr/tests/: cli.rs
