[workspace]
members = ["catr", "cutr", "echor", "findr", "headr", "uniqr", "wcr"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Highlander Paiva <contact@hvpaiva@dev>"]
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
