[package]
name = "cutr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
csv = "1.3.1"
regex = "1.11.1"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
rstest = "0.23.0"
